# bankrot-telegram-bot

./: .env.example  .gitignore  .pre-commit-config.yaml  BOT_INTEGRATION.md  COMMANDS.md  CONTINUITY.md  Dockerfile  INTEGRATION_GUIDE.md  INTEGRATION_PHASE1.md  MENU_REFACTORING.md  PROJECT_NOTES  PR_DESCRIPTION.md  QUICKSTART.md  README.md  REFACTORING.md  VERIFICATION.md  alembic.ini  bot.py  bot.py.before_admin  bot.py.before_whitelist  bot.py.broken.2025-12-16_103136.bak  cases.py  check_integration.sh  docker-compose-simple.yml  docker-compose.yml  keyboards.py  pyproject.toml  requirements.txt  test_bot.py  test_cases.py  test_petition.docx  web.py
alembic/: env.py
alembic/versions/: 20260112_0000_001_create_cases_table.py  20260113_0000_002_add_case_assets_and_parties.py
bankrot_bot/: config.py  database.py  logging_setup.py  run_migrations.py  shared.py  utils.py
bankrot_bot/handlers/: callbacks.py  cases.py
bankrot_bot/keyboards/: menus.py
bankrot_bot/models/: __init__.py  case.py  case_asset.py  case_party.py
bankrot_bot/services/: blocks.py  case_financials.py  cases_db.py  docs_builder.py  docx_forms.py  docx_jinja.py  gigachat.py  public_docs.py
handlers/: __init__.py  callbacks.py  docs.py  newcase_fsm.py  probability.py
templates/: bankruptcy_petition_template.docx  real_petition.docx
templates/forms/: creditors_list_template.docx  inventory_template.docx
templates/petitions/: bankruptcy_petition.docx
