[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bankrot-telegram-bot"
version = "1.0.0"
description = "Telegram bot for bankruptcy case management"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.0.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "python-dotenv>=1.0.0",
    "python-docx>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_calls = false  # Too strict for aiogram decorators
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
pretty = true

# Relax strictness for specific patterns
[[tool.mypy.overrides]]
module = "aiogram.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "docx.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "alembic.*"
ignore_missing_imports = true

# Allow untyped defs in migration files
[[tool.mypy.overrides]]
module = "alembic.versions.*"
disallow_untyped_defs = false

# Allow untyped defs in test files
[[tool.mypy.overrides]]
module = "test_.*"
disallow_untyped_defs = false
